# ds-vis

./: .gitignore  404.html  AGENTS.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
PLAN/: index.html
api/: index.html
demo/scenarios/: index.html
design/animation/: index.html
design/architecture/: index.html
design/dsl/: index.html
design/json/: index.html
design/layout/: index.html
design/layout_v2/: index.html
design/llm/: index.html
design/model/: index.html
design/ops_spec/: index.html
design/renderer/: index.html
design/requirements/: index.html
design/scene_graph/: index.html
diagrams/: index.html
diagrams/profile/: case.dot  case.pstats
diagrams/uml/: packages_ds_vis.dot
docs/: ANIMATION_REQUIREMENTS.md  ARCHITECTURE.md  DEV_KNOWLEDGE_BASE.md  ENVIRONMENT.md  INDEX.md  OPS_SPEC.md  PLAN.md  REQUEST.md  index.md  project_state.md  quickstart.md
docs/api/: index.md
docs/design/: animation.md  architecture.md  dsl.md  json.md  layout.md  layout_v2.md  llm.md  model.md  ops_spec.md  renderer.md  requirements.md  scene_graph.md
docs/diagrams/: index.md
docs/engineering/: dev_kb.md  environment.md  full_dev_guide.md  tdd_guide.md  testing_ci.md
engineering/dev_kb/: index.html
project_state/: index.html
quickstart/: index.html
repo_readme/: index.html
search/: search_index.json
src/ds_vis/: __init__.py
tests/: conftest.py  test_renderer_basic.py  test_skeleton_flow.py  test_ui_dev.py
tools/: check_architecture.py  profile_case.py
(+74 files in other folders)
