[project]
name = "ds-vis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "gzh", email = "elecdot5@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
ds-vis = "ds_vis:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
