[project]
name = "ds-vis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "gzh", email = "elecdot5@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "pyside6>=6.10.1",
]

[project.scripts]
ds-vis = "ds_vis:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.8",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--cov=ds_vis --cov-report=term-missing"

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I"]  # pycodestyle, pyflakes, isort

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

